test/good/25.cc
int main()
{
    int x = 10;
    return x;
    if (x == 10)
    {
        return x;
    }
    else
    {
        x = 42;
    }
    {
        while (true)
        {
            {
                return 1;
            }
        }
    }
}